# VK_Mark-2

./: .gitignore  CMakeLists.txt  README.md  VulkanRenderer.sln  VulkanRenderer.vcxproj  VulkanRenderer.vcxproj.filters
VulkanRenderer/x64/Debug/: VulkanRenderer.exe.recipe
res/models/: cubeskybox.glb
res/shaders/: aabb_vert.spv  aabb_vert.vert  color_correction.spv  color_correction_comp.comp  colored_frag.hlsl  colored_frag.spv  colored_triangle_vert.hlsl  colored_triangle_vert.spv  compile_shaders.bat  equirect2cubemap.spv  gradient_comp.comp  gradient_comp.hlsl  gradient_comp.spv  hdr2cubemap_comp.comp  hdr2cubemap_comp.spv  input_structures.glsl  input_structures.hlsl  mesh_frag.frag  mesh_frag.spv  mesh_vert.spv  mesh_vert.vert  sky_comp.comp  sky_comp.hlsl  sky_comp.spv  skybox_frag.frag  skybox_frag.spv  skybox_vert.spv  skybox_vert.vert  tex_image_frag.hlsl  tex_image_frag.spv  triangle_mesh_vert.hlsl  triangle_mesh_vert.spv
res/shaders/bounding_boxes/: aabb_frag.frag  aabb_vert.spv  aabb_vert.vert
res/shaders/debug/: aabb_frag.frag  aabb_frag.spv  aabb_frag.spv.dis  aabb_vert.spv  aabb_vert.spv.dis  aabb_vert.vert
res/shaders/environment/: brdf_lut_comp.comp  brdf_lut_comp.spv  brdf_lut_comp.spv.dis  diffuse_irradiance_comp.comp  diffuse_irradiance_comp.spv  diffuse_irradiance_comp.spv.dis  hdr2cubemap_comp.comp  hdr2cubemap_comp.spv  hdr2cubemap_comp.spv.dis  skybox_frag.frag  skybox_frag.spv  skybox_frag.spv.dis  skybox_vert.spv  skybox_vert.spv.dis  skybox_vert.vert  specular_prefilter_comp.comp  specular_prefilter_comp.spv  specular_prefilter_comp.spv.dis
res/shaders/include/: gpu_scene_structures.glsl  input_structures.glsl  pbr.glsl  set_bindings.glsl
res/shaders/meshes/: mesh_frag.frag  mesh_frag.spv  mesh_frag.spv.dis  mesh_vert.spv  mesh_vert.spv.dis  mesh_vert.vert
res/shaders/post_process/: color_correction_comp.comp  color_correction_comp.spv  color_correction_comp.spv.dis
res/shaders/visibility/: visibility.spv  visibility_comp.comp  visibility_comp.spv  visibility_comp.spv.dis
src/: Engine.cpp  Engine.h  ErrorChecking.h  Main.cpp
src/common/: EngineConstants.h  EngineTypes.h  ErrorChecking.h  ResourceTypes.h  Vk_Types.h  glm_common.hpp  pch.h
src/core/: AssetManager.cpp  AssetManager.h  EngineState.cpp  EngineState.h  EngineStats.h  Environment.cpp  Environment.h  JobSystem.cpp  JobSystem.h  ResourceManager.cpp  ResourceManager.h
src/core/loader/: MeshLoader.cpp  MeshLoader.h  TextureLoader.cpp  TextureLoader.h
src/core/types/: Texture.cpp  Texture.h
src/engine/: Engine.cpp  Engine.h  EngineState.cpp  EngineState.h  JobSystem.cpp  JobSystem.h
src/engine/platform/input/: Camera.cpp  Camera.h  UserInput.cpp  UserInput.h
src/engine/platform/profiler/: EditorImgui.cpp  EditorImgui.h  Profiler.cpp  Profiler.h
src/engine/platform/window/: Window.cpp  Window.h
src/file/: File.cpp  File.h
src/imgui/: EditorImgui.cpp  EditorImgui.h
src/input/: Camera.cpp  Camera.h  UserInput.cpp  UserInput.h
src/profiler/: EditorImgui.cpp  EditorImgui.h  Profiler.cpp  Profiler.h
src/renderer/: Batching.cpp  Batching.h  CommandBuffer.cpp  CommandBuffer.h  Descriptor.cpp  Descriptor.h  DrawPreparation.cpp  DrawPreparation.h  DrawPreperation.cpp  DrawPreperation.h  RenderGraph.cpp  RenderGraph.h  RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h  SceneGraph.cpp  SceneGraph.h  Visibility.cpp  Visibility.h
src/renderer/backend/: Backend.cpp  Backend.h  BackendTools.h
src/renderer/frame/: FrameContext.cpp  FrameContext.h
src/renderer/gpu/: CommandBuffer.cpp  CommandBuffer.h  Descriptor.cpp  Descriptor.h  PipelineBuilder.cpp  PipelineBuilder.h  PipelineManager.cpp  PipelineManager.h
src/renderer/gpu_types/: CommandBuffer.cpp  CommandBuffer.h  Descriptor.cpp  Descriptor.h  PipelineManager.cpp  PipelineManager.h
src/renderer/scene/: DrawPreparation.cpp  DrawPreparation.h  RenderScene.cpp  RenderScene.h  SceneGraph.cpp  SceneGraph.h  Visibility.cpp  Visibility.h
src/renderer/types/: LightCube.cpp  LightCube.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/utils/: BarrierUtils.cpp  BarrierUtils.h  BufferUtils.cpp  BufferUtils.h  ImageUtils.cpp  ImageUtils.h  RendererUtils.cpp  RendererUtils.h  SyncUtils.cpp  SyncUtils.h  VulkanUtils.cpp  VulkanUtils.h
src/vulkan/: Backend.cpp  Backend.h  BackendTools.cpp  BackendTools.h  Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h  Window.cpp  Window.h
